<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="wellcome_geveze">Wellcome to Geveze</string>

    <string name="dialog_internet_connection_text">You do not have an Internet connection, keep an eye on your connection.</string>
    <string name="dialog_phone_number_text">Please enter a valid phone number.</string>

    <string name="okay">Ok</string>
    <string name="go_on">Continue</string>
    <string name="registration">Registration</string>
    <string name="verification">Verification</string>
    <string name="phone_number">Phone Number</string>
    <string name="choice">Select</string>
    <string name="country_code">Country code</string>
    <string name="activation_code">Activation Code</string>
    <string name="contacts">Contacts</string>

    <string name="phone">Phone</string>
    <string name="search">Search</string>
    <string name="forward">Forward</string>
    <string name="resend">Resend</string>
    <string name="chat">Chat</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="message_write">Message...</string>

    <string name="refresh">Refresh</string>
    <string name="warning">Warning</string>

    <string name="registration_info">Geveze will send you an SMS message to verify your phone number. Enter your country code and phone number:</string>
    <string name="verification_info1">You have tried to register with the above number recently. It may take a few minutes arriving SMS.</string>
    <string name="verification_info2">*Please enter the activation code sent via SMS.</string>

    <string name="Firebase_TooMany_Requests_Exception">It is too Many request is sent. Try later</string>
    <string name="Firebase_AuthInvalid_Credentials_Exception">Credential is not given to this device.</string>

</resources>